--- a/gb/20/1/13/n11790380.md
+++ b/gb/20/1/13/n11790380.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/qgedzr297/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qgedzr297/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qblrme335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>药物开发模拟系统问世 节省大量实验时间</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月13日讯】（大纪元记者李少维编译）美国明尼苏达大学（University of Minnesota）一组生物医学家开发了一套<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E6%A8%A1%E6%8B%9F.md">模拟</a>微观分子结合情况的系统，将大幅缩短研究人员开发治疗癌症、爱滋病和免疫系统等疾病的药物的时间，是同类研究中首例。</p>
+	<p>【大纪元2020年01月13日讯】（大纪元记者李少维编译）美国明尼苏达大学（University of Minnesota）一组生物医学家开发了一套<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E6%A8%A1%E6%8B%9F.md#1">模拟</a>微观分子结合情况的系统，将大幅缩短研究人员开发治疗癌症、爱滋病和免疫系统等疾病的药物的时间，是同类研究中首例。</p>
 <p>“这项研究的重大进展在于，研究人员通常靠实验、从错误中不断改进的方法研究分子之间的互相作用，我们开发了一套数学框架，根据我们知道的参数用计算机预计（分子间互相作用的）结果。”这份研究的主要作者、明尼苏达大学生物医学家萨卡（Casim Sarkar）说，“这套模型将改善研究效率，加快多种疾病治疗药物的开发。”</p>
 <p>“从基本层面看，很多疾病追踪到底都可以归咎于分子结合的问题。”合作研究者爱灵顿（Wesley Errington）说。</p>
 <p>研究人员认为分子上每个结合点与其他分子结合的力度、分子上不同结合点之间联系的强度，以及结合阵列的规模这三个参数是影响分子之间结合的重要因素，通过调整它们可以控制分子之间的结合情况。</p>
@@ -13,45 +13,46 @@
 <p>研究人员还打算将这个系统制成网页版，方便科研人员在线使用。</p>
 <p>这份研究近期发表在《美国国家科学院院刊》（PNAS）上。◇</p>
 <p>责任编辑：朱涵儒</p>
-
+	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/13/n11790380.htm">药物开发模拟系统问世 节省大量实验时间</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11670117.htm">玉山科协与经文处23日合办创新创业论坛</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/1/n11491427.htm">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11465087.htm">新研究发现人体微菌产生数千种未知蛋白质</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11439927.htm">抗癌新革命 交大首创膜蛋白癌症追踪地图</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11373683.htm">科学家对单个原子实现核磁共振成像</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/27/n11349301.htm">美限令重创中共超级电脑 中科曙光复牌跌停</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/13/n11320200.htm">生物技术公司看好费城研发投资环境</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11315673.htm">制药业游说费花销上亿 三角区公司不例外</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/24/n11277824.htm">氦气短缺让科学家担忧</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/29/n11221631.htm">研究找到苗条基因 新一代减重药物开发在即</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788275.htm">114个“耳光”搧向国台办 李敖儿子微博被封</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788008.htm">蔡英文高票当选 网络调侃央视主播“贡献”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788541.htm">中共官员变换护照身份 逃避人权法案制裁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788435.htm">姆钦：北京若再与伊朗交易 美制裁绝不松手</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745420.htm">北京北新桥锁龙井里真有龙吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772993.htm">【历史回眸】惊世灾难是怎样被中共抹去的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11783658.htm">【更新】蔡英文破817万票 民进党立委过半</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11786063.htm">【拍案惊奇】蔡英文连任！北京的三层误判</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772884.htm">【直播回放】蔡英文高票连任 名家点评胜选关键</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11783661.htm">【拍案惊奇】台湾大选 分享5个忠告</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/12/n11651617.htm">【思想领袖】中共正威胁我们的权利和自由</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728419.htm">【三国英雄】之九：屡遭劫持的汉献帝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11783413.htm">黄秋生下周舌战何君尧 杜汶泽幽默分享经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782930.htm">黄渤饰教练引争议 《中国女排》或无缘新年档</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11784585.htm">2010至2019年全球美女Top30榜 子瑜获第5名</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782420.htm">台湾总统大选在即 网红、艺人吁：要去投票</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788333.htm">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/3/6/16/n329280.md#1">糖尿病药物开发有新方向</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/4/29/n11221631.md#1">研究找到苗条基因 新一代减重药物开发在即</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/5/24/n11277824.md#1">氦气短缺让科学家担忧</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/6/11/n11315673.md#1">制药业游说费花销上亿 三角区公司不例外</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790380.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11276054.md#1" target="_blank">金言：蒋介石当年在江西的惊人预言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/4/n11163148.md#1" target="_blank">医生见证人病人重生的神奇</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826726.md#1">【拍案惊奇】北京画外交红线 川普建社媒平台</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828240.md#1">【大话西油】“文艺复兴教父”洛伦佐传奇一生</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828962.md#1">【横河直播】反亚裔仇恨集会 谁在打种族牌</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825808.md#1">蓬佩奥谈杨洁篪发飙：我会这样击其痛点</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824695.md#1">美议员促扩大制裁 阻中芯国际购DUV光刻机</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826026.md#1">整治冥纸冥币  中共“新破四旧”运动遭轰</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827709.md#1">罗时丰大港开唱：纵使过气，也不要丧气</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12818954.md#1">癌症病人能打新冠疫苗吗？医师：一类癌症要谨慎</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827458.md#1">心情高低起伏 男子遗失百万美元彩券后寻回</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/13/n11790380.htm">药物开发模拟系统问世 节省大量实验时间</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qblrme335/djy/blob/master/gb/20/1/13/n11790380.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
